# SMB-manager

./: README.md  install.sh  pyproject.toml  setup.py  setup_app.py
src/: config_manager.py  gui_manager.py  mount_manager.py
